// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render duplicated line 1`] = `
<Tooltip
  overlay="source_viewer.tooltip.duplicated_block"
  placement="right"
>
  <td
    className="source-meta source-line-duplications-extra source-line-duplicated"
    data-index={1}
    data-line-number={3}
    key="1"
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="source-line-bar"
    />
  </td>
</Tooltip>
`;

exports[`render not duplicated line 1`] = `
<td
  className="source-meta source-line-duplications-extra"
  data-index={1}
  data-line-number={3}
  key="1"
>
  <div
    className="source-line-bar"
  />
</td>
`;
